--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet" href="modelo.css">
-<title>ㅁㅁㅁstore~</title>
+<title>몬카store~</title>
 </head>
 <body>
 	<div class="center">
 		<h1>
-			<span class='letter'>마마마soon</span>
+			<span class='letter'>곧soon</span>
 		</h1>
 	</div>
 </body>
