--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet" href="modelo.css">
-<title>몬카store~</title>
+<title>monkaStore~</title>
 </head>
 <body>
-	<div class="center">
-		<h1>
-			<span class='letter'>곧soon</span>
-		</h1>
+		<div class="center">
+		<center><img width=47% height=47% src="xaxa.png"></center>
 	</div>
 </body>
 </html>
