--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <title>monkaStore</title>
 </head>
 <body>
-		<div class="center">
-		<center><img width=47% height=47% src="xaxa.png"></center>
-	</div>
+<div class="container">
+
+		<img src="xaxa.png" class="image">
+
+</div>
 </body>
 </html>
