--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet" href="modelo.css">
-<title>monkaStore~</title>
+<title>monkaStore</title>
 </head>
 <body>
+	<div class="video-background">
+		<div class="video-foreground">
+			<iframe
+				src="http://www.youtube.com/embed/videoseries?list=PLj1YQZGi2Gmuljm0YR1Rnr7uwgRXMgCwz&index=20&controls=0&showinfo=0&rel=0&iv_load_policy=3&autoplay=1&loop=1"
+				frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>
+
 	<div class="container">
 		<center>
-			<img src="xaxa.png" class="image">
+			<img src="testess.png" class="image">
 		</center>
 
-		<audio id="bgsound" autoplay loop> <source src="blackout.mp3"
-			type="audio/mp3"> </audio> <script>
-				var aud = document.getElementById("bgsound");
-				function baxaVolume() {
-					aud.volume = 0.1;
-				}
-				baxaVolume();
-			</script>
 	</div>
+
+
 </body>
 </html>
