--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="video-foreground">
 			<iframe
 				src="http://www.youtube.com/embed/videoseries?list=PLj1YQZGi2Gmuljm0YR1Rnr7uwgRXMgCwz&index=20&controls=0&showinfo=0&rel=0&iv_load_policy=3&autoplay=1&loop=1"
-				frameborder="0" allowfullscreen>huh</iframe>
+				frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 		</div>
 	</div>
 
