--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<div class="video-background">
 		<div class="video-foreground">
 			<iframe
-				src="http://www.youtube.com/embed/videoseries?list=PLj1YQZGi2Gmuljm0YR1Rnr7uwgRXMgCwz&index=20&controls=0&showinfo=0&rel=0&iv_load_policy=3&autoplay=1&loop=1"
-				frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+				src="http://www.youtube.com/embed/videoseries?list=PLj1YQZGi2Gmuljm0YR1Rnr7uwgRXMgCwz&amp;index=20&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3&amp;autoplay=1&amp;loop=1"
+				frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 
