--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet" href="modelo.css">
-<title>monkaStore</title>
+<title>monkaStore - Em Breve</title>
 </head>
 <body>
 	<div class="video-background">
