--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet" href="modelo.css">
-<title>monkaStore - Em Breve</title>
+<title>monkaStore</title>
 </head>
 <body>
 	<div class="video-background">
 		<div class="video-foreground">
 			<iframe
-				src="https://www.youtube.com/embed/videoseries?list=PLj1YQZGi2Gmuljm0YR1Rnr7uwgRXMgCwz&amp;index=20&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3&amp;autoplay=1&amp;loop=1"
+				src="http://www.youtube.com/embed/videoseries?list=PLj1YQZGi2Gmuljm0YR1Rnr7uwgRXMgCwz&amp;index=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3&amp;autoplay=1&amp;loop=1"
 				frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
-
+<div class="container">
 	<div class="container">
-		<center>
-			<img src="testess.png" class="image">
-		</center>
+
+			<img src="ouou.png" class="image">
+
 
 	</div>
-
-
+</div>
+<div class="center">em breve</div>
 </body>
 </html>
