--- a/index.html
+++ b/index.html
@@ -23,4 +23,8 @@
 </div>
 <div class="center">em breve</div>
 </body>
+	<footer class="footah">
+<a href="facebook.com/monkastore" class="fa fa-facebook"></a>
+<a href="twitter.com/monka_store" class="fa fa-twitter"></a>
+</footer>
 </html>
