--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="center">em breve</div>
 </body>
 	<footer class="footah">
-<a href="http://facebook.com/monkastore" target="_blank" class="fa fa-facebook"></a>
+<a href="http://facebook.com/monkaStore96" target="_blank" class="fa fa-facebook"></a>
 <a href="http://twitter.com/monka_store" target="_blank" class="fa fa-twitter"></a>
 </footer>
 </html>
